[FIX] Fix the wrong colorings of navigation links

--- a/UI/css/additem.css
+++ b/UI/css/additem.css
@@ -1,6 +1,10 @@
 body{
 	background: whitesmoke;
 }
-.nav .nav-items a{
-	color: white;
+.nav .nav-item a{
+	color: white!important;
+}
+
+.nav-item.active a{
+	color:orange!important;
 }
